# clearkey-demo

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  db.sqlite3  pyproject.toml  requirements.txt
backend/media/encrypted/11/: stream.mpd
backend/media/encrypted/12/: stream.mpd  video_1.m4s
backend/media/encrypted/13/: stream.mpd  video_1.m4s
backend/media/encrypted/14/: stream.mpd
backend/media/encrypted/15/: stream.mpd  video_1.m4s
backend/media/encrypted/16/: stream.mpd
backend/media/encrypted/17/: stream.mpd  video_1.m4s
backend/media/encrypted/18/: stream.mpd
backend/media/encrypted/19/: stream.mpd
backend/media/uploads/: output_av1_2_hlHg0xO.webm  output_vp9_2.webm
backend/server/: celery.py  settings.py  urls.py
backend/videos/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
backend/videos/migrations/: 0001_initial.py  0002_video_enable_compression_alter_video_status.py
backend/videos/templates/videos/: video_detail.html  video_list.html
packager/: Dockerfile  app.py  pack.sh
